--- a/index.html
+++ b/index.html
@@ -203,7 +203,8 @@
     <div id="content">
         <div class="login-card">
             <img src="logo.png" /><br>
-            <h2>อินเตอร์เน็ต สำหรับคนไข้และญาติ</h2>
+            <h2>อินเตอร์เน็ต</h2>
+            <h3>สำหรับคนไข้และญาติ</h3>
             <form name="login_form" id="login-form" method="post" action="$PORTAL_ACTION$">
                 <input type="text" name="auth_user" placeholder="เลขบัตรประชาชน" id="auth_user" pattern="[0-9]{13}"
                     required>
